# factories

./: .gitignore  404.html  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.backup  Dockerfile.final  Dockerfile.render  LICENSE  PROJECT_SUMMARY.md  README.md  README_FINAL.md  README_GITHUB.md  USER_GUIDE_AR.md  _config.yml  admin_dashboard.html  advanced_dashboard.html  analytics.html  api_server.py  auth_system.py  build.rs  build_railway.sh  build_render.sh  create_test_products.py  dashboard_fixed.html  dashboard_live.html  database.py  deploy_all.sh  docker-compose.yml  download_products_fixed.html  export_server.py  factories_real_status.json  factories_status.json  factory_example.html  favicon.ico.info  fix_docs.py  fly.toml  index.html  launch_factories.sh  (+29 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml
backup_factories/: mod.rs
deployments/cloud/scripts/: deploy.sh  destroy.sh  monitor.sh
deployments/cloud/terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
deployments/docker/: Dockerfile  docker-compose.prod.yml
deployments/kubernetes/: marwan-hub.yaml
deployments/termux/: install.sh
docs/: index.md
docs/arabic/: README_AR.md
products/: export_system.py
products/corporate/: README.txt  corporate_20260131_101440.md  corporate_report_20260131.md
products/creative/: README.txt  creative_20260131_101440.json  creative_design_logo_20260131.json
products/education/: README.txt  education_20260131_101440.md  education_course_ai_20260131.md
products/technology/: README.txt  technology_20260131_101440.txt  technology_library_text_20260131.txt
src/: lib.rs
src/api/: main.rs  mod.rs  routes.rs
src/api/handlers/: factory.rs  learning.rs  mhos.rs  mod.rs  system.rs
src/api/middleware/: auth.rs  cors.rs  logger.rs  mod.rs
src/cli/: main.rs  mod.rs
src/cli/commands/: analyze.rs  docs.rs  factory.rs  generate.rs  manufacture.rs  mhos.rs  mod.rs  serve.rs  system.rs
src/core/: config.rs  errors.rs  factory.rs  factory_manager.rs  mod.rs  quality.rs
src/factories/: mod.rs
src/factories/corporate/: mod.rs
src/factories/creative/: mod.rs
src/factories/education/: mod.rs
src/factories/technology/: mod.rs
src/mhos/: dashboard.rs  mod.rs  monitor.rs  optimizer.rs  quality_gates.rs
templates/courses/: ai_machine_learning.json  basic_course.json  rust_programming.json
templates/designs/: arabic_design_system.json
templates/documents/: technical_report_ar.md
templates/websites/: arabic_blog.html  arabic_professional.html  basic_ar.html
