[package]
name = "marwan-hub-factories"
version = "3.0.0"
edition = "2021"
authors = ["Marwan Hub <contact@marwanhub.com>"]
description = "Smart Factory System with MH-OS v2.2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/marwanhubeg/marwan-hub-factories"
readme = "README.md"
keywords = ["factories", "automation", "mh-os", "education", "creative", "corporate", "technology"]
categories = ["command-line-utilities", "web-programming", "development-tools"]

[dependencies]
actix-web = "4.0"
actix-rt = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
bytes = "1.0"
futures = "0.3"
async-trait = "0.1"
rand = "0.8"
regex = "1.0"
tera = "1.0"

[dev-dependencies]
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"

[[bin]]
name = "marwan-hub-factories"
path = "src/main.rs"

[[bin]]
name = "mh-cli"
path = "src/cli/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[workspace]
members = ["."]
